// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactNew /> renders correctly the component 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <h2
      class="mb-4"
    >
      contactsNew.title
    </h2>
    <div
      class="form card"
    >
      <div
        class="card-body"
      >
        <form
          class=""
          data-testid="contact-form"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.givenname
            </label>
            <input
              class="form-control"
              maxlength="24"
              minlength="2"
              placeholder="contactsNew.givenname"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.surname
            </label>
            <input
              class="form-control"
              maxlength="24"
              minlength="2"
              placeholder="contactsNew.surname"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.email
            </label>
            <input
              class="form-control"
              placeholder="contactsNew.email"
              required=""
              type="email"
              value=""
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.phone
            </label>
            <input
              class="form-control"
              maxlength="12"
              placeholder="contactsNew.phone"
              required=""
              type="tel"
              value=""
            />
          </div>
          <div
            class="d-flex justify-content-between"
          >
            <button
              class="w-100 btn btn-secondary"
              data-testid="contact-form-back-btn"
              type="button"
            >
              contactsNew.backBtn
            </button>
            <button
              class="w-100 ms-3 btn btn-primary"
              type="submit"
            >
              contactsNew.submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ContactNew /> submit form calls addContact correctly and set errors: errors 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <h2
      class="mb-4"
    >
      contactsNew.title
    </h2>
    <div
      class="form card"
    >
      <div
        class="card-body"
      >
        <form
          class=""
          data-testid="contact-form"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.givenname
            </label>
            <input
              class="form-control"
              maxlength="24"
              minlength="2"
              placeholder="contactsNew.givenname"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.surname
            </label>
            <input
              class="form-control"
              maxlength="24"
              minlength="2"
              placeholder="contactsNew.surname"
              required=""
              type="text"
              value=""
            />
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.email
            </label>
            <input
              class="form-control"
              placeholder="contactsNew.email"
              required=""
              type="email"
              value=""
            />
            <div
              class="text-danger mt-2 mb-0"
              data-testid="error-box-email"
            >
              <span>
                errors.email
              </span>
            </div>
          </div>
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactsNew.phone
            </label>
            <input
              class="form-control"
              maxlength="12"
              placeholder="contactsNew.phone"
              required=""
              type="tel"
              value=""
            />
            <div
              class="text-danger mt-2 mb-0"
              data-testid="error-box-phone"
            >
              <span>
                errors.phone
              </span>
            </div>
          </div>
          <div
            class="d-flex justify-content-between"
          >
            <button
              class="w-100 btn btn-secondary"
              data-testid="contact-form-back-btn"
              type="button"
            >
              contactsNew.backBtn
            </button>
            <button
              class="w-100 ms-3 btn btn-primary"
              type="submit"
            >
              contactsNew.submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
